--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
   <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-  
+  <header>
+    <div class="logo">
+      <i class="fab fa-youtube"></i>
+      <span class="title">Youtube</span>
+    </div>
+    <div class="icons">
+      <i class="fas fa-serch"></i>
+      <i class="fas fa-toggle"></i>
+    </div>
+  </header>
+  <section class="player">
+    <video src=""></video>
+  </section>
+  <section class="info"></section>
+  <section class="upNext"></section>
 </body>
 </html>
