--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./assets/css/style.css">
   <script src="https://kit.fontawesome.com/bb7724eed7.js" crossorigin="anonymous"></script>
+  <script type="javascript" src="./assets/js/main.js" defer></script>
 </head>
 <body>
   <!--Header-->
@@ -27,76 +28,76 @@
   <!--Media Query-->
   <div class="infoAndUpnext">
       <!--Video Information-->
-  <section class="info">
-    <!--Metadata-->
-    <div class="metadata">
-      <ul class="hashtags">
-        <li>#도쿄먹방</li>
-        <li>#도쿄여행</li>
-        <li>#일본여행</li>
-      </ul>
-      <div class="titleAndButton">
-        <span class="title">
-          KYOPLE 일본 도쿄여행 먹방기 | 루크스 랍스터 샌드위치 먹방 | 쿄플TV in 오모테산도 
-        </span>
-        <button class="moreBtn"><i class="fas fa-caret-down"></i></button>
-      </div>
-      <div class="views">
-        <span class="views">조회수 503,632회 · 2020.3.14</span>
-      </div>
-    </div>
-    <!--Action Button-->
-    <ul class="actions">
-      <li><button><i class="active fas fa-thumbs-up"></i>15K</button></li>
-      <li><button><i class="fas fa-thumbs-down"></i>0</button></li>
-      <li><button><i class="fas fa-share"></i>공유</button></li>
-      <li><button><i class="fas fa-plus"></i>저장</button></li>
-      <li><button><i class="fab fa-font-awesome-flag"></i>더보기</button></li>
-    </ul>
-    <!--Channel Description-->
-    <div class="channel">
+    <section class="info">
+      <!--Metadata-->
       <div class="metadata">
-        <img src="./images/avatar.jpg" alt="">
-        <div class="info">
-          <span class="name">KYOPLE TV</span>
-          <span class="subscribers">구독자 23.5만명</span></div>
+        <ul class="hashtags">
+          <li>#도쿄먹방</li>
+          <li>#도쿄여행</li>
+          <li>#일본여행</li>
+        </ul>
+        <div class="titleAndButton">
+          <span class="title clamp">
+            KYOPLE 일본 도쿄여행 먹방기 | 루크스 랍스터 샌드위치 먹방 | 쿄플TV in 오모테산도 | 여행에 미치다 | 여행을 떠나요 | 쿄플티비 본방사수 | KYOPLE 일본 도쿄여행 먹방기 | 루크스 랍스터 샌드위치 먹방 | 쿄플TV in 오모테산도 | 여행에 미치다 | 여행을 떠나요 | 쿄플티비 본방사수
+          </span>
+          <button class="moreBtn"><i class="fas fa-caret-down"></i></button>
         </div>
-        <button class="subscribe">구독</button>
-    </div>
-  </section>
-  <!--Up Next-->
-  <section class="upNext">
-    <span class="title">재생 목록</span>
-    <ul>
-      <li class="item">
-        <div class="img"><img src="./images/thumb1.png" alt=""></div>
-        <div class="info">
-          <span class="title">역대급 배틀그라운드 26킬 치킨 목표 달성!!</span>
-          <span class="name">배그TV</span>
-          <span class="views">조회수 24,564회</span>
+        <div class="views">
+          <span class="views">조회수 503,632회 · 2020.3.14</span>
         </div>
-        <button class="moreBtn"></button>
-      </li>
-      <li class="item">
-        <div class="img"><img src="./images/thumb2.jpg" alt=""></div>
-        <div class="info">
-          <span class="title">유튜브 디자인하자 | 디자인의 모든것 | 당신도 디자이너</span>
-          <span class="name">디자인TV</span>
-          <span class="views">조회수 62,124회</span>
-        </div>
-        <button class="moreBtn"></button>
-      </li>
-      <li class="item">
-        <div class="img"><img src="./images/thumb3.jpg" alt=""></div>
-        <div class="info">
-          <span class="title">커플사진 잘찍는 꿀팁 가르쳐드립니다 | 남친 금손 만들기 | 커플사진</span>
-          <span class="name">커플TV</span>
-          <span class="views">조회수 12,368회</span>
-        </div>
-        <button class="moreBtn"></button>
-      </li>
-    </ul>
-  </section>
+      </div>
+      <!--Action Button-->
+      <ul class="actions">
+        <li><button><i class="active fas fa-thumbs-up"></i>15K</button></li>
+        <li><button><i class="fas fa-thumbs-down"></i>0</button></li>
+        <li><button><i class="fas fa-share"></i>공유</button></li>
+        <li><button><i class="fas fa-plus"></i>저장</button></li>
+        <li><button><i class="fab fa-font-awesome-flag"></i>더보기</button></li>
+      </ul>
+      <!--Channel Description-->
+      <div class="channel">
+        <div class="metadata">
+          <img src="./images/avatar.jpg" alt="">
+          <div class="info">
+            <span class="name">KYOPLE TV</span>
+            <span class="subscribers">구독자 23.5만명</span></div>
+          </div>
+          <button class="subscribe">구독</button>
+      </div>
+    </section>
+    <!--Up Next-->
+    <section class="upNext">
+      <span class="title">재생 목록</span>
+      <ul>
+        <li class="item">
+          <div class="img"><img src="./images/thumb1.png" alt=""></div>
+          <div class="info">
+            <span class="title">역대급 배틀그라운드 26킬 치킨 목표 달성!!</span>
+            <span class="name">배그TV</span>
+            <span class="views">조회수 24,564회</span>
+          </div>
+          <button class="moreBtn"></button>
+        </li>
+        <li class="item">
+          <div class="img"><img src="./images/thumb2.jpg" alt=""></div>
+          <div class="info">
+            <span class="title">유튜브 디자인하자 | 디자인의 모든것 | 당신도 디자이너</span>
+            <span class="name">디자인TV</span>
+            <span class="views">조회수 62,124회</span>
+          </div>
+          <button class="moreBtn"></button>
+        </li>
+        <li class="item">
+          <div class="img"><img src="./images/thumb3.jpg" alt=""></div>
+          <div class="info">
+            <span class="title">커플사진 잘찍는 꿀팁 가르쳐드립니다 | 남친 금손 만들기 | 커플사진</span>
+            <span class="name">커플TV</span>
+            <span class="views">조회수 12,368회</span>
+          </div>
+          <button class="moreBtn"></button>
+        </li>
+      </ul>
+    </section>
   </div>
 </body>
 </html>
