--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
           <span class="title clamp">
             KYOPLE 일본 도쿄여행 먹방기 | 루크스 랍스터 샌드위치 먹방 | 쿄플TV in 오모테산도 | 여행에 미치다 | 여행을 떠나요 | 쿄플티비 본방사수 | KYOPLE 일본 도쿄여행 먹방기 | 루크스 랍스터 샌드위치 먹방 | 쿄플TV in 오모테산도 | 여행에 미치다 | 여행을 떠나요 | 쿄플티비 본방사수
           </span>
-          <button class="moreBtn"><i class="fas fa-caret-down"></i></button>
+          <button class="moreBtn">
+            <i class="fas fa-caret-down"></i>
+          </button>
         </div>
         <div class="views">
           <span class="views">조회수 503,632회 · 2020.3.14</span>
@@ -61,8 +63,8 @@
           <div class="info">
             <span class="name">KYOPLE TV</span>
             <span class="subscribers">구독자 23.5만명</span></div>
-          </div>
-          <button class="subscribe">구독</button>
+        </div>
+        <button class="subscribe">구독</button>
       </div>
     </section>
     <!--Up Next-->
