--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./assets/css/style.css">
   <script src="https://kit.fontawesome.com/bb7724eed7.js" crossorigin="anonymous"></script>
-  <script type="javascript" src="./assets/js/main.js" defer></script>
+  <script src="assets/js/main.js" defer></script>
 </head>
 <body>
   <!--Header-->
